--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	package="ch.uzh.ifi.attempto.mobileape"
-	android:versionCode="3"
-	android:versionName="0.2">
+	android:versionCode="5"
+	android:versionName="0.3">
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 		<activity android:name=".MobileApe" android:label="@string/app_name">
 			<intent-filter>
@@ -13,6 +13,9 @@
 		</activity>
 		
 		<activity android:name=".ShowAbout" android:label="@string/activity_showabout_name">
+		</activity>
+		
+		<activity android:name=".SnippetListView" android:label="@string/activity_snippetlistview_name">
 		</activity>
 
 	</application>
